fix footer overlapping main content

--- a/src/modules/ApplicationDecline/ApplicationDecline.module.scss
+++ b/src/modules/ApplicationDecline/ApplicationDecline.module.scss
@@ -1,4 +1,5 @@
 .page {
+  height: 100dvh;
   min-height: 100vh;
   background: var(--color-bg-main);
   width: 100%;
@@ -42,6 +43,20 @@
   display: flex;
   flex-direction: column;
   gap: var(--spacing-l);
+  min-height: 0;
+  overflow-y: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+    width: 0;
+    height: 0;
+  }
+}
+
+.mainExtended {
+  padding-bottom: 180px;
 }
 
 .sectionTitle {
